# PaperHub

./: README.md  name-badge.py  pyproject.toml
tests/: test_paper_hub.py
