[tool.poetry]
name = "paper-hub"
version = "0.1.0"
description = ""
authors = ["Mike Smith <mikerhyssmith@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
inky = "^1.2.0"
font-hanken-grotesk= "^0.0.2"
font-intuitive = "^0.0.4"
pillow = "^8.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
